MDEV-27439  AUTO_INCREMENT columns with DESC index do not work

row_search_get_max_rec() fails to skip the metadata record
for desc index.